--- a/resources/metabase-plugin.yaml
+++ b/resources/metabase-plugin.yaml
@@ -1,6 +1,6 @@
 info:
-  name: Metabase Databricks Spark SQL Driver
-  version: 1.0.0-SNAPSHOT
+  name: Metabase Databricks Spark SQL Driver (v2)
+  version: 1.1.0
   description: Allows Metabase to connect to Databricks Spark SQL databases.
 driver:
   - name: hive-like
@@ -8,7 +8,7 @@ driver:
     abstract: true
     parent: sql-jdbc
   - name: sparksql-databricks
-    display-name: Spark SQL (Databricks)
+    display-name: Databricks SQL (v2)
     lazy-load: true
     parent: hive-like
     connection-properties:
