fix: pr comms (#5)
* fix: pr comms

* fix: jar naming

---------

Co-authored-by: Stefani <>

--- a/resources/metabase-plugin.yaml
+++ b/resources/metabase-plugin.yaml
@@ -15,31 +15,42 @@ driver:
       - merge:
         - host
         - placeholder: "<account>.cloud.databricks.com"
+          helper-text: "The hostname of your Databricks account"
+      - name: app-id
+        display-name: Databricks client id
+        placeholder: "9af18267-60e7-4061-b2d5-e2414af88b0b"
+        required: true
+        helper-text: "The id of the service principal you generated an Oauth token for (see : https://docs.databricks.com/en/dev-tools/authentication-oauth.html)"
+      - name: app-secret
+        display-name: Databricks OAuth secret
+        placeholder: "doseXXXXXXXXXXXX"
+        required: true
+        helper-text: "The secret of the service principal you generated an Oauth token for (see : https://docs.databricks.com/en/dev-tools/authentication-oauth.html)"
       - name: http-path
         display-name: HTTP Path
         placeholder: "/sql/1.0/warehouses/<id>"
-      - name: app-id
-        display-name: App ID
-        placeholder: "9af18267-60e7-4061-b2d5-e2414af88b0b"
-      - name: app-secret
-        display-name: App Secret
-        placeholder: "doseXXXXXXXXXXXX"
+        helper-text: "The path to the Databricks SQL endpoint (see : https://docs.databricks.com/en/integrations/compute-details.html)"
+        required: true
       - name: catalog
         display-name: Catalog
         placeholder: "<catalog-name>"
-      - merge:
-          - port
-          - default: 443
+        required: true
       - merge:
           - dbname
           - required: false
+            display-name: Schema / Database (Optional)
       - advanced-options-start
       - merge:
           - additional-options
           - name: jdbc-flags
             placeholder: ";transportMode=http;ssl=1;"
+      - merge:
+          - additional-options
+          - name: port
+            display-name: HTTP Port
+            placeholder: "443"
+            default: 443
       - default-advanced-options
-    connection-properties-include-tunnel-config: false
 init:
   - step: load-namespace
     namespace: metabase.driver.sparksql-databricks-v2
